# libKeyFinder

./: .gitignore  .travis.yml  CMakeLists.txt  LibKeyFinder.pro  README  README.md  _GLOBAL.h  audiodata.cpp  audiodata.h  audiostream.cpp  audiostream.h  binode.h  chromagram.cpp  chromagram.h  chromatransform.cpp  chromatransform.h  chromatransformfactory.cpp  chromatransformfactory.h  circularbuffer.cpp  circularbuffer.h  constants.cpp  constants.h  downsampler.cpp  downsampler.h  exception.cpp  exception.h  fftadapter.cpp  fftadapter.h  fftpp.cpp  fftpp.h  fftppdirectsk.cpp  fftppdirectsk.h  keyclassifier.cpp  keyclassifier.h  keyfinder.cpp  keyfinder.h  keyfinder_api.cpp  keyfinder_api.h  keyfinderresult.h  libKeyFinder.pc.cmake  (+35 more)
.github/workflows/: build-and-test.yml
ci/: alpine.sh
ci/alpine/: clean-cache.sh  install.sh  memcheck.supp  run.sh  settings.patch  test.sh
cmake/: FindFFTW.cmake
debian/: .pbuilderrc  changelog  control  generate_libkeyfinder_deb.sh  libkeyfinder-dev.dirs  libkeyfinder-dev.install  libkeyfinder1.dirs  libkeyfinder1.install
googleTest/: _testhelpers.cpp  _testhelpers.h  audiodatatest.cpp  audiodatatest.h  binodetest.cpp  binodetest.h  chromagramtest.cpp  chromagramtest.h  chromatransformfactorytest.cpp  chromatransformfactorytest.h  chromatransformtest.cpp  chromatransformtest.h  circularbuffertest.cpp  circularbuffertest.h  constantstest.cpp  constantstest.h  downsamplershortcuttest.cpp  downsamplershortcuttest.h  downsamplertest.cpp  downsamplertest.h  fftadaptertest.cpp  fftadaptertest.h  googleTest.pro  keyclassifiertest.cpp  keyclassifiertest.h  keyfinderresulttest.cpp  keyfinderresulttest.h  keyfindertest.cpp  keyfindertest.h  lowpassfilterfactorytest.cpp  lowpassfilterfactorytest.h  lowpassfiltertest.cpp  lowpassfiltertest.h  main.cpp  parameterstest.cpp  parameterstest.h  ringbuffertest.cpp  ringbuffertest.h  segmentationtest.cpp  segmentationtest.h  (+10 more)
tests/: CMakeLists.txt  _testhelpers.cpp  _testhelpers.h  audiodatatest.cpp  binodetest.cpp  chromagramtest.cpp  chromatransformfactorytest.cpp  chromatransformtest.cpp  constantstest.cpp  downsamplershortcuttest.cpp  fftadaptertest.cpp  keyclassifiertest.cpp  keyfindertest.cpp  lowpassfilterfactorytest.cpp  lowpassfiltertest.cpp  main.cpp  spectrumanalysertest.cpp  temporalwindowfactorytest.cpp  tests.pro  toneprofilestest.cpp  windowfunctiontest.cpp  workspacetest.cpp
vs2010-external_libs/fftw-3.3.3-dll32/: libfftw3-3.lib
